Edit: Theorem SSLD, justifications in alternate proof (Chili Johnson)
Edit: Theorem AISM, added missing justification in proof (Jonathan Adams)
Edit: Improved justifications for eigenstuff proofs
Edit: Definition ELEM, fixed scalar multiple elementary matrix (Lukas Edman)
Edit: Clarify Solution ILT.C33 (Daniel York)
Edit: Consistent notation in Subsection VR (Daniel York)
Typo: Example NSS, sentence needs "which" to join clauses (Chili Johnson)
Typo: Example LLDS, set is R, not B (Daniel York)
Typo: Solution LDS.C52, set is T, not S (Molly Hazlehurst)
Typo: Annotated Acronyms, Chapter M, Theorem CSCS, question mark, missing "h" (Kelsey Reed)
Typo: Example DSM22, subspace is Z, not V (Kelsey Reed)
Typo: Exercise CRS.C20, "clolumn" should be column (Henry Woody)
Typo: Exercise SD.T15, identity matrices have size n, not 3 (Henry Woody)
Typo: Solution SD.T16, added necessary line break (Henry Woody)
Typo: Exercise LT.C42, codomain is complexes, not reals (Daniel York)
Typo: Sage LTS, codomain is C^4, not C^2 (Kelsey Reed)
Typo: Section IVLT, "to to" is just "to" (Molly Hazlehurst)
Typo: Exercise LT.M60, linear transformation is Z, not T (Kelsey Reed)
Typo: Subsection IVLT.RNLT, "rank of the codomain" is "dimension" (Chili Johnson)
Typo: Exercises M60 in ILT, SLT, IVLT, more T that are Z (Jonathan Adams)
Typo: Example KVMR, basis should not be written as a span (Chili Johnson)

v3.40 2014/12/12
~~~~~~~~~~~~~~~~
Typo: Example LIP4, sign on  2\alpha_{3}x^2  term, twice (Albert Schueller)
Typo: Exercise ILT.C30, degree should be dimension (Deborah DeHovitz)
Typo: Exercise PD.T05, added in trivial hypothesis (Jason Preszler)
Change: Theorem CMVEI, proof incorrect about r < m (Mike Taper)

v3.30 2014/08/27
~~~~~~~~~~~~~~~~
New: Exercise OD.T30, proof for product of upper triangular matrices
Edit: Clarified part of Solution LISS.C25 (Riley Carpenter)
Edit: Grammar - many contractions and hyphens surveyed, possibly adjusted