@@ -738,7 +738,7 @@ Since these vectors are linearly independent (why?), $W$ is a subspace of $P_3$ 
 <exercise type="C" number="23" rough="Dim of subspace of M22">
 <problem contributor="chrisblack">Find the dimension of the subspace
 <![CDATA[$W = \setparts{\begin{bmatrix} a & b\\c & d \end{bmatrix}}{a + b = c, b + c = d, c + d = a}$]]>
-of $M_{2,2}$.
+of $M_{22}$.
 </problem>
 <solution contributor="chrisblack">The equations specified are equivalent to the system
 <alignmath>
@@ -760,7 +760,7 @@ the subspace $W$ can be described as
 <![CDATA[W &= \setparts{\begin{bmatrix} 3d & -d \\ 2d & d\end{bmatrix}}{d\in\complexes}]]>
 <![CDATA[=\spn{\set{\begin{bmatrix} 3 & -1 \\ 2 & 1\end{bmatrix}}}]]>
 </alignmath>
-So, $W$ is a subspace of $M_{2,2}$ with dimension 1.
+So, $W$ is a subspace of $M_{22}$ with dimension 1.
 </solution>
 </exercise>
 
