@@ -1153,7 +1153,7 @@ Thus, a basis for the nullspace of $A$ is $\set{\colvector{-1\\-1\\3\\0}}$, and 
 </exercise>
 
 <exercise type="C" number="30" rough="Injective?  find kernel.">
-<problem contributor="chrisblack"><![CDATA[Let $T : M_{2,2} \rightarrow P_2$ be given by $T\left(\begin{bmatrix} a & b \\ c & d \end{bmatrix}\right) = (a + b) + (a + c)x + (a + d)x^2$.  Is $T$ injective?  Find $\krn{T}$.]]>
+<problem contributor="chrisblack"><![CDATA[Let $T : M_{22} \rightarrow P_2$ be given by $T\left(\begin{bmatrix} a & b \\ c & d \end{bmatrix}\right) = (a + b) + (a + c)x + (a + d)x^2$.  Is $T$ injective?  Find $\krn{T}$.]]>
 </problem>
 <solution contributor="chrisblack"><![CDATA[We can see without computing that $T$ is not injective, since the dimension of $M_{2,2}$ is larger than the dimension of $P_2$.  However, that does not address the question of the kernel of $T$.  We need to find all matrices $\begin{bmatrix} a & b \\ c & d \end{bmatrix}$ so that $(a + b) + (a + c)x + (a + d)x^2 = 0$.  This means $a + b = 0$, $a + c = 0$, and $a + d = 0$, or equivalently, $b = d = c = -a$.  Thus, the kernel is a one-dimensional subspace of $M_{2,2}$ spanned by $\begin{bmatrix} 1 & -1\\-1&-1 \end{bmatrix}$.  Symbolically, we have $\krn{T} = \spn{\begin{bmatrix} 1 & -1\\-1&-1 \end{bmatrix}}$.]]>
 </solution>
