@@ -1311,11 +1311,11 @@ is similar.
 <exercise type="M" number="30" rough="Create a 4x4 inverse">
 <problem contributor="robertbeezer">The linear transformation $S$ below is invertible.  Find a formula for the inverse linear transformation, $\ltinverse{S}$.
 <equation>
-<![CDATA[\ltdefn{S}{P_1}{M_{1,2}},\quad \lt{S}{a+bx}=\begin{bmatrix} 3a+b & 2a+b \end{bmatrix}]]>
+<![CDATA[\ltdefn{S}{P_1}{M_{12}},\quad \lt{S}{a+bx}=\begin{bmatrix} 3a+b & 2a+b \end{bmatrix}]]>
 </equation>
 </problem>
 <solution contributor="robertbeezer">(Another approach to this solution would follow <acroref type="example" acro="CIVLT" />.)<br /><br />
-Suppose that $\ltdefn{\ltinverse{S}}{M_{1,2}}{P_1}$ has a form given by
+Suppose that $\ltdefn{\ltinverse{S}}{M_{12}}{P_1}$ has a form given by
 <equation>
 <![CDATA[\lt{\ltinverse{S}}{\begin{bmatrix}z & w\end{bmatrix}}=\left(rz+sw\right)+\left(pz+qw\right)x]]>
 </equation>
