@@ -811,12 +811,12 @@ S = \set{
 }
 </equation>
 <!-- . -->
-<ol><li> Determine if $S$ spans $M_{2,2}$.
+<ol><li> Determine if $S$ spans $M_{22}$.
 </li><li> Determine if $S$ is linearly independent.
 </li></ol>
 </problem>
 <solution contributor="chrisblack"><ol><li>
-If $S$ spans $M_{2,2}$, then for every $2 \times 2$ matrix
+If $S$ spans $M_{22}$, then for every $2 \times 2$ matrix
 <![CDATA[$B = \begin{bmatrix}x & y \\ z & w\end{bmatrix}$,]]>
 there exist constants $\alpha, \beta, \gamma$ so that
 <alignmath>
@@ -877,12 +877,12 @@ S = \set{
 }
 </equation>
 <!-- . -->
-<ol><li> Determine if $S$ spans $M_{2,2}$.
+<ol><li> Determine if $S$ spans $M_{22}$.
 </li><li> Determine if $S$ is linearly independent.
 </li></ol>
 </problem>
 <solution contributor="chrisblack"><ol><li>
-<![CDATA[The matrices in $S$ will span $M_{2,2}$ if for any $\begin{bmatrix} x& y\\z& w\end{bmatrix}$, there are coefficients $a, b, c, d, e$ so that]]>
+<![CDATA[The matrices in $S$ will span $M_{22}$ if for any $\begin{bmatrix} x& y\\z& w\end{bmatrix}$, there are coefficients $a, b, c, d, e$ so that]]>
 <alignmath>
 <![CDATA[a\begin{bmatrix} 1 & 2\\ 2 & 1 \end{bmatrix} +]]>
 <![CDATA[b\begin{bmatrix} 2 & 1\\-1 & 2 \end{bmatrix} +]]>
@@ -930,7 +930,7 @@ This system will have a solution for <em>every</em> vector on the right side if 
 <![CDATA[0 &  0 & 0 & \leading{1} & -2]]>
 \end{bmatrix}
 </alignmath>
-<![CDATA[Since there is a leading one in each row of the row-reduced coefficient matrix, there is a solution for every vector $\colvector{x\\y\\z\\w}$, which means that there is a solution to the original equation for every matrix $\begin{bmatrix} x & y\\ z & w \end{bmatrix}$.  Thus, the original five matrices span $M_{2,2}$.]]>
+<![CDATA[Since there is a leading one in each row of the row-reduced coefficient matrix, there is a solution for every vector $\colvector{x\\y\\z\\w}$, which means that there is a solution to the original equation for every matrix $\begin{bmatrix} x & y\\ z & w \end{bmatrix}$.  Thus, the original five matrices span $M_{22}$.]]>
 </li><li> The matrices in $S$ are linearly independent if the only solution to
 <alignmath>
 <![CDATA[a\begin{bmatrix} 1 & 2\\ 2 & 1 \end{bmatrix} +]]>
