@@ -1822,7 +1822,7 @@ Thus, the matrix representation of $T$ is
 </exercise>
 
 <exercise type="C" number="42" rough="Find preimage T: M22 --> R">
-<problem contributor="chrisblack">Define $\ltdefn{T}{M_{2,2}}{\complex{1}}$ by
+<problem contributor="chrisblack">Define $\ltdefn{T}{M_{22}}{\complex{1}}$ by
 <![CDATA[$\lt{T}{\begin{bmatrix} a & b \\ c & d \end{bmatrix}} = a + b + c - d$.]]>
 Find the pre-image $\preimage{T}{3}$.
 </problem>
