@@ -146,7 +146,7 @@ and $\alpha=7$, then
 
 <sageadvice acro="MS" index="matrix spaces">
 <title>Matrix Spaces</title>
-Sage defines our set $M_{mn}$ as a <q>matrix space</q> with the command <code>MatrixSpace(R, m, n)</code> where <code>R</code> is a number system and <code>m</code> and <code>n</code> are the number of rows and number of columns, respectively.  This object does not have much functionality defined in Sage.  Its main purposes are to provide a parent for matrices, and to provide another way to create matrices.  The two matrix operations just defined (addition and scalar multiplication) are implemented as you would expect.  In the example below, we create two matrices in $M_{2,3}$ from just a list of 6 entries, by coercing the list into a matrix by using the relevant matrix space as if it were a function.  Then we can perform the basic operations of matrix addition (<acroref type="definition" acro="MA" />) and matrix scalar multiplication (<acroref type="definition" acro="MSM" />).
+Sage defines our set $M_{mn}$ as a <q>matrix space</q> with the command <code>MatrixSpace(R, m, n)</code> where <code>R</code> is a number system and <code>m</code> and <code>n</code> are the number of rows and number of columns, respectively.  This object does not have much functionality defined in Sage.  Its main purposes are to provide a parent for matrices, and to provide another way to create matrices.  The two matrix operations just defined (addition and scalar multiplication) are implemented as you would expect.  In the example below, we create two matrices in $M_{23}$ from just a list of 6 entries, by coercing the list into a matrix by using the relevant matrix space as if it were a function.  Then we can perform the basic operations of matrix addition (<acroref type="definition" acro="MA" />) and matrix scalar multiplication (<acroref type="definition" acro="MSM" />).
 <sage>
 <input>MS = MatrixSpace(QQ, 2, 3)
 MS
@@ -1127,7 +1127,7 @@ Solving this linear system by row-reducing the augmnented matrix shows that $\al
 </exercise>
 
 <exercise type="M" number="21" rough="Standard basis is lin ind">
-<problem contributor="robertbeezer">Show that the set $S$ is linearly independent in $M_{2,2}$.
+<problem contributor="robertbeezer">Show that the set $S$ is linearly independent in $M_{22}$.
 <equation>
 S=\set{
 <![CDATA[\begin{bmatrix}1&0\\0&0\end{bmatrix},\,]]>
@@ -1170,7 +1170,7 @@ The only solution is then $\alpha = 0$, $\beta = 0$, $\gamma = 0$, and $\delta =
 </exercise>
 
 <exercise type="M" number="22" rough="Stray lin ind set in M_23">
-<problem contributor="robertbeezer">Determine if the set $S$ below is linearly independent in $M_{2,3}$.
+<problem contributor="robertbeezer">Determine if the set $S$ below is linearly independent in $M_{23}$.
 <equation>
 \set{
 <![CDATA[\begin{bmatrix} -2 & 3 & 4 \\ -1 & 3 & -2 \end{bmatrix},\,]]>
@@ -1211,7 +1211,7 @@ which yields the linear system of equations
 <![CDATA[ -2a_1 + a_2 + 2a_3 + 2a_4 - 2a_5 &= 0.]]>
 </alignmath>
 By row-reducing the associated $6\times 5$ homogeneous system, we see that the only solution is
-$ a_1 = a_2 = a_3 = a_4 = a_5 = 0$, so these matrices are a linearly independent subset of $M_{2,3}$.
+$ a_1 = a_2 = a_3 = a_4 = a_5 = 0$, so these matrices are a linearly independent subset of $M_{23}$.
 </solution>
 </exercise>
 
@@ -1275,10 +1275,10 @@ T = \set{
 </exercise>
 
 <exercise type="M" number="25" rough="Upper triangular, basis">
-<problem contributor="robertbeezer">Define a subset of $M_{3,3}$ by
+<problem contributor="robertbeezer">Define a subset of $M_{33}$ by
 <equation>
 U_{33}=\setparts{
-A\in M_{3,3}
+A\in M_{33}
 }{
 \matrixentry{A}{ij}=0\text{ whenever }i>j
 }
