@@ -2099,7 +2099,7 @@ This matrix representation is invertible (it has a nonzero determinant of $-1$, 
 <exercise type="C" number="41" rough="Inverse lin trans via matrix rep">
 <problem contributor="robertbeezer">Prove that the linear transformation $S$ is invertible.  Then find a formula for the inverse linear transformation, $\ltinverse{S}$, by employing a matrix inverse.
 <equation>
-\ltdefn{S}{P_1}{M_{1,2}},\quad \lt{S}{a+bx}=
+\ltdefn{S}{P_1}{M_{12}},\quad \lt{S}{a+bx}=
 <![CDATA[\begin{bmatrix} 3a+b & 2a+b \end{bmatrix}]]>
 </equation>
 </problem>
