@@ -1153,7 +1153,7 @@ are linearly independent, so is a basis of $\rng{T}$.  Since the dimension of th
 </exercise>
 
 <exercise type="C" number="28" rough="Find basis of range.  Is T surjective?">
-<problem contributor="chrisblack">Let $\ltdefn{T}{\complex{4}}{ M_{2,2}}$ be given by
+<problem contributor="chrisblack">Let $\ltdefn{T}{\complex{4}}{ M_{22}}$ be given by
 <![CDATA[$\lt{T}{\colvector{a\\b\\c\\d}} = \begin{bmatrix} a + b & a + b + c\\ a + b + c & a + d\end{bmatrix}$.]]>
  Find a basis of $\rng{T}$.
 Is $T$ surjective?
@@ -1187,8 +1187,8 @@ These three matrices are linearly independent, so a basis of $\rng{T}$ is
 $\set{
 <![CDATA[\begin{bmatrix} 1 & 1 \\1 & 0 \end{bmatrix},]]>
 <![CDATA[\begin{bmatrix} 0 & 1 \\1 & 0 \end{bmatrix},]]>
-<![CDATA[\begin{bmatrix} 0 & 0 \\0 & 1 \end{bmatrix}}$.  Thus, $T$ is not surjective, since the range has dimension 3 which is shy of $\dimension{M_{2,2}}=4$.]]>
-(Notice that the range is actually the subspace of symmetric $2 \times 2$ matrices in $M_{2,2}$.)
+<![CDATA[\begin{bmatrix} 0 & 0 \\0 & 1 \end{bmatrix}}$.  Thus, $T$ is not surjective, since the range has dimension 3 which is shy of $\dimension{M_{22}}=4$.]]>
+(Notice that the range is actually the subspace of symmetric $2 \times 2$ matrices in $M_{22}$.)
 </solution>
 </exercise>
 
