@@ -536,9 +536,9 @@ so the composition of $\ltinverse{S}$ with $T$ is invertible.  Then $\ltdefn{\le
 <example acro="MIVS" index="isomorphic!multiple vector spaces">
 <title>Multiple isomorphic vector spaces</title>
 
-<p>$\complex{10}$, $P_{9}$, $M_{2,5}$ and $M_{5,2}$ are all vector spaces and each has dimension 10.  By <acroref type="theorem" acro="IFDVS" /> each is isomorphic to any other.</p>
+<p>$\complex{10}$, $P_{9}$, $M_{25}$ and $M_{52}$ are all vector spaces and each has dimension 10.  By <acroref type="theorem" acro="IFDVS" /> each is isomorphic to any other.</p>
 
-<p>The subspace of $M_{4,4}$ that contains all the symmetric matrices (<acroref type="definition" acro="SYM" />) has dimension $10$, so this subspace is also isomorphic to each of the four vector spaces above.</p>
+<p>The subspace of $M_{44}$ that contains all the symmetric matrices (<acroref type="definition" acro="SYM" />) has dimension $10$, so this subspace is also isomorphic to each of the four vector spaces above.</p>
 
 </example>
 
@@ -727,7 +727,7 @@ You will have noticed that we have never constructed examples involving our favo
 <!--   End of  vr.tex -->
 <readingquestions>
 <ol>
-<li>The vector space of $3\times 5$ matrices, $M_{3,5}$ is isomorphic to what fundamental vector space?
+<li>The vector space of $3\times 5$ matrices, $M_{35}$ is isomorphic to what fundamental vector space?
 </li>
 <li>A basis for $\complex{3}$ is
 <equation>
