@@ -115,7 +115,7 @@ If $\vect{u}\in V$, then $1\vect{u}=\vect{u}$.</content></property>
 
 </example>
 
-<p>So, the set of all matrices of a fixed size forms a vector space.  That entitles us to call a matrix a vector, since a matrix is an element of a vector space.  For example, if $A,\,B\in M_{3,4}$ then we call $A$ and $B$ <q>vectors,</q> and we even use our previous notation for column vectors to refer to $A$ and $B$.  So we could legitimately write expressions like
+<p>So, the set of all matrices of a fixed size forms a vector space.  That entitles us to call a matrix a vector, since a matrix is an element of a vector space.  For example, if $A,\,B\in M_{34}$ then we call $A$ and $B$ <q>vectors,</q> and we even use our previous notation for column vectors to refer to $A$ and $B$.  So we could legitimately write expressions like
 <equation>
 \vect{u}+\vect{v}=A+B=B+A=\vect{v}+\vect{u}
 </equation>
@@ -602,7 +602,7 @@ so that $x = y + z_2$ and $y = x + z_1$.  This means that $z_1 = y - x$ and $z_2
 </exercise>
 
 <exercise type="M" number="13" rough="Vector space or not?">
-<problem contributor="chrisblack">Let $V$ be the set $M_{2,2}$ with the usual  scalar multiplication, but with addition defined by
+<problem contributor="chrisblack">Let $V$ be the set $M_{22}$ with the usual  scalar multiplication, but with addition defined by
 $A + B = \zeromatrix_{2,2}$ for all $2 \times 2$ matrices $A$ and $B$.
 Determine whether or not $V$ is a vector space with these operations.
 </problem>
@@ -611,7 +611,7 @@ Determine whether or not $V$ is a vector space with these operations.
 </exercise>
 
 <exercise type="M" number="14" rough="Vector space or not?">
-<problem contributor="chrisblack">Let $V$ be the set $M_{2,2}$ with the usual  addition, but with scalar multiplication defined by
+<problem contributor="chrisblack">Let $V$ be the set $M_{22}$ with the usual  addition, but with scalar multiplication defined by
 $\alpha A= \zeromatrix_{2,2}$ for all $2 \times 2$ matrices $A$ and scalars $\alpha$.
 Determine whether or not $V$ is a vector space with these operations.
 </problem>
