@@ -15,6 +15,7 @@ Edit: Improved justifications for eigenstuff proofs
 Edit: Definition ELEM, fixed scalar multiple elementary matrix (Lukas Edman)
 Edit: Clarify Solution ILT.C33 (Daniel York)
 Edit: Consistent notation in Subsection VR (Daniel York)
+Edit: Commas in matrix space notation (Kelsey Reed)
 Typo: Example NSS, sentence needs "which" to join clauses (Chili Johnson)
 Typo: Example LLDS, set is R, not B (Daniel York)
 Typo: Solution LDS.C52, set is T, not S (Molly Hazlehurst)
